--- a/DOM/q6.html
+++ b/DOM/q6.html
@@ -61,10 +61,11 @@
 <body>
     <h1>BOOK MY SHOW</h1>
     <select>
-        <option value="all">All</option>
+        <option value="All">All</option>
         <option value="action">Action</option>
         <option value="romance">Romance</option>
         <option value="comedy">Comedy</option>
+        <!-- <option value="scifi">scifi</option> -->
     </select>
 
     <div class="movies">
@@ -108,7 +109,7 @@
         <p class="price" data-category="comedy">Rs 200</p>
     </div>
 
-    <script>
+ <script>
 
         let select=document.querySelector("select");
 
@@ -135,6 +136,8 @@
         })
 
     </script>
+
+
 </body>
 
 </html>
